gitops/apps/blog/httproute-redirects.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-redirects
  namespace: blog
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - blog.${BASE_DOMAIN}
    - www.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: ${BASE_DOMAIN}
            statusCode: 301
